--- a/burstiness.tex
+++ b/burstiness.tex
@@ -237,7 +237,7 @@ As for IMMSB proof, we only consider the relations  that occur inside class $c=\
 With $\sigma(\phi) = \frac{1}{1+\exp(-\phi)}$ and $\p(\phi) = \mathcal{N}(0, \sigma_w)$.
 
 
-\textcolor{red}{not ended yet...}
+\textcolor{red}{not ended yet...no theorem to go from the definition to the predictive likelihood}
 \end{proof}
 
 \begin{proposition}
