--- a/models.tex
+++ b/models.tex
@@ -125,7 +125,7 @@ As mentioned before, we will consider two setups for the use of those models. Th
 %
 where $^\top$ denotes the transpose. We will refer to the model corresponding to this setting as $\mathcal{M}_e = \{\mat{\hat{F}},\mat{\hat{\Phi}}\}$). Note that the number of nodes $N$ is fixed and corresponds to the number of nodes present in the observations.
 
-The second version is a purely generative version that solely relies on the hyper-parameters to generate networks with a given number of nodes $N$. The model corresponding to this setting will be denoted$\mathcal{M}_g = \{\mathcal H\}$, where $\mathcal H$ is \the set of hyperparameters for a given model. The probability of generating a link between  two nodes $i$ and $j$ is given by:
+The second version is a purely generative version that solely relies on the hyper-parameters to generate networks with a given number of nodes $N$. The model corresponding to this setting will be denoted $\mathcal{M}_g = \{\mathcal H\}$, where $\mathcal{H}$ is the set of hyperparameters for a given model. The probability of generating a link between  two nodes $i$ and $j$ is given by:
 %
 
 \begin{equation}
