--- a/sparsity.tex
+++ b/sparsity.tex
@@ -1,6 +1,6 @@
 \section{Sparsity}
 
-The last property we study in this paper is the sparsity. Sparsity is the fact that most value in a dataset are empty. Whenever a feature space can be big an object would end with most of his feature to be equal to zeros. In networks, the sparsity is directy quantified by the density of the network. In text collection, a few word of the dictionnary appears in each document and so on.
+The last property we study in this paper is the sparsity. Sparsity is the fact that most value in a dataset are empty. Whenever a feature space can be big an object would end with most of his feature to be equal to zeros. In networks, the sparsity is directly quantified by the density of the network. In text collection for example, a few words of the dictionary appears in each document and so on.
 
 %defnition of dense and sparse netwroks are given in Bayesian Models of Graphs, Arrays and Other Exchangeable Random Structures(Peter Orbanz and Daniel M. Roy) \\
 
@@ -30,4 +30,4 @@ In the model the density for undirected networks of size $|V|=N$ is defined by t
 
 Thus the density is not dependent of $N$, and thus the number of edge grows with $N^2$ since its expectation is  $\dbinom{N}{2} \epsilon$.
 
-This result shows that the model generate dense networks because the model is misspecified. More precisely, this results generalize for all graph that have an assumption of echangeability. This strong result is a direct consequance of the theorem of Haldous-Houver \ref{orbanz2015bayesian}. 
+This result shows that the model generate dense networks because the model is misspecified. More precisely, this results generalize for all graph that have an assumption of exchangeability. This strong result is a direct consequence of the theorem of Haldous-Houver \ref{orbanz2015bayesian}. 
